export class Artefact {}
